Remove annotation from values.yaml & Rename annotation & Use annotation in configmap
The annotation is a gardener implementation detail that does not need to
be exposed via the values.yaml interface. This it's removed.

Annotation is renamed to better reflect its function and official
annotation naming conventions are used from
https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#label-selector-and-annotation-conventions

--- a/charts/gardener-extension-shoot-lakom-service/templates/configmap-extension-config.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/configmap-extension-config.yaml
@@ -16,7 +16,7 @@ data:
 {{ toYaml .Values.controllers.cosignPublicKeys | indent 6 }}
     seedBootstrap:
       ownerNamespace: {{ .Release.Namespace }}
-      enabled: true
+      enabled: {{ get .Values.gardener.seed.annotations "service.lakom.extensions.gardener.cloud/enable-lakom-admission-controller" | default true }}
     useOnlyImagePullSecrets: {{ .Values.controllers.useOnlyImagePullSecrets }}
     allowUntrustedImages: {{ .Values.controllers.allowUntrustedImages }}
     allowInsecureRegistries: {{ .Values.controllers.allowInsecureRegistries }}
