Disable lakom via annotation from seed (#106)
* Add value & update configmap for controller chart

* Deploy lakom based on deployseedresources flag

* Use default value "true" for deploying seed resources

* Rename `DeploySeedResources` to `Enabled` and move to `SeedBootstrap`

* Add logs for disabling/installing lakom based on `Enabled` in `SeedBootstrap`

* Update configmap with API changes & refactor admission controller deletion code

Co-authored-by: Vladimir Nachev <vladimir.nachev@sap.com>

* Remove annotation from values.yaml & Rename annotation & Use annotation in configmap

The annotation is a gardener implementation detail that does not need to
be exposed via the values.yaml interface. This it's removed.

Annotation is renamed to better reflect its function and official
annotation naming conventions are used from
https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#label-selector-and-annotation-conventions

* Update chart

* Rerun make generate & make format

* Update how the way `enabled` is rendered & update chart in contr. registration

---------

Co-authored-by: Vladimir Nachev <vladimir.nachev@sap.com>

--- a/charts/gardener-extension-shoot-lakom-service/templates/configmap-extension-config.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/configmap-extension-config.yaml
@@ -16,6 +16,10 @@ data:
 {{ toYaml .Values.controllers.cosignPublicKeys | indent 6 }}
     seedBootstrap:
       ownerNamespace: {{ .Release.Namespace }}
+      # We want to ensure that enabled receives a default value of "true" if the annotation is not passed with the helm chart values.
+      # Check https://github.com/helm/helm/issues/8026#issuecomment-833059490 for an explanation on why dig is needed.
+      # Dig only traverses maps but `.Values` is of another type. The `merge (dict)` part transforms it into a map.
+      enabled: {{ dig "gardener" "seed" "annotations" "service.lakom.extensions.gardener.cloud/enable-lakom-admission-controller" "true" (.Values | merge (dict)) }}
     useOnlyImagePullSecrets: {{ .Values.controllers.useOnlyImagePullSecrets }}
     allowUntrustedImages: {{ .Values.controllers.allowUntrustedImages }}
     allowInsecureRegistries: {{ .Values.controllers.allowInsecureRegistries }}
