--- a/charts/gardener-extension-shoot-lakom-admission/charts/application/Chart.yaml
+++ b/charts/gardener-extension-shoot-lakom-admission/charts/application/Chart.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 SAP SE or an SAP affiliate company and Gardener contributors
+#
+# SPDX-License-Identifier: Apache-2.0
+
 apiVersion: v1
 description: A Helm chart to deploy the gardener-extension-shoot-lakom-admission application related resources
 name: application
