--- a/charts/gardener-extension-shoot-lakom-admission/charts/application/templates/serviceaccount.yaml
+++ b/charts/gardener-extension-shoot-lakom-admission/charts/application/templates/serviceaccount.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 SAP SE or an SAP affiliate company and Gardener contributors
+#
+# SPDX-License-Identifier: Apache-2.0
+
 {{- if and .Values.global.virtualGarden.enabled ( not .Values.global.virtualGarden.user.name ) }}
 apiVersion: v1
 kind: ServiceAccount
