--- a/charts/gardener-extension-shoot-lakom-admission/charts/runtime/templates/secret-kubeconfig.yaml
+++ b/charts/gardener-extension-shoot-lakom-admission/charts/runtime/templates/secret-kubeconfig.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 SAP SE or an SAP affiliate company and Gardener contributors
+#
+# SPDX-License-Identifier: Apache-2.0
+
 {{- if .Values.global.kubeconfig }}
 apiVersion: v1
 kind: Secret
