--- a/charts/gardener-extension-shoot-lakom-admission/charts/runtime/templates/vpa.yaml
+++ b/charts/gardener-extension-shoot-lakom-admission/charts/runtime/templates/vpa.yaml
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2024 SAP SE or an SAP affiliate company and Gardener contributors
+#
+# SPDX-License-Identifier: Apache-2.0
+
+---
 {{- if .Values.global.vpa.enabled}}
 apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
