Add additional resources to validating webhook config

--- a/charts/lakom/templates/validatingwebhookconfiguration.yaml
+++ b/charts/lakom/templates/validatingwebhookconfiguration.yaml
@@ -46,6 +46,8 @@ webhooks:
     resources:
     - pods
     - pods/ephemeralcontainers
+    - controllerdeployments
+    - gardenlets
     scope: '*'
   sideEffects: None
   timeoutSeconds: 25
