Add additional resources for the validating & mutating webhooks

--- a/charts/lakom/templates/mutatingwebhookconfiguration.yaml
+++ b/charts/lakom/templates/mutatingwebhookconfiguration.yaml
@@ -46,6 +46,9 @@ webhooks:
     resources:
     - pods
     - pods/ephemeralcontainers
+    - controllerdeployments
+    - gardenlets
+    - operator.extensions
     scope: '*'
   sideEffects: None
   timeoutSeconds: 25
