prepare for deployment of admission controller by gardener-operator

--- a/charts/gardener-extension-shoot-lakom-admission/charts/runtime/templates/secret-kubeconfig.yaml
+++ b/charts/gardener-extension-shoot-lakom-admission/charts/runtime/templates/secret-kubeconfig.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 
-{{- if .Values.global.kubeconfig }}
+{{- if .Values.kubeconfig }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -12,5 +12,5 @@ metadata:
 {{ include "labels" . | indent 4 }}
 type: Opaque
 data:
-  kubeconfig: {{ .Values.global.kubeconfig | b64enc }}
+  kubeconfig: {{ .Values.kubeconfig | b64enc }}
 {{- end }}
