--- a/charts/gardener-extension-shoot-lakom-admission/charts/application/templates/serviceaccount.yaml
+++ b/charts/gardener-extension-shoot-lakom-admission/charts/application/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 
-{{- if and .Values.global.virtualGarden.enabled ( not .Values.global.virtualGarden.user.name ) }}
+{{- if and .Values.gardener.virtualCluster.enabled ( not .Values.gardener.virtualCluster.serviceAccount.name ) }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
