--- a/charts/gardener-extension-shoot-lakom-admission/charts/application/values.yaml
+++ b/charts/gardener-extension-shoot-lakom-admission/charts/application/values.yaml
@@ -1,1 +1,6 @@
-../../values.yaml
+gardener:
+  virtualCluster:
+    enabled: true
+    serviceAccount: {}
+#     name: gardener-extension-shoot-lakom-admission
+#     namespace: kube-system
