--- a/charts/lakom/templates/validatingwebhookconfiguration.yaml
+++ b/charts/lakom/templates/validatingwebhookconfiguration.yaml
@@ -36,16 +36,6 @@ webhooks:
 {{ toYaml .Values.admissionConfig.objectSelector | indent 4 }}
 {{- end }}
   rules:
-  - apiGroups:
-    - ""
-    apiVersions:
-    - v1
-    operations:
-    - CREATE
-    - UPDATE
-    resources:
-    - pods
-    - pods/ephemeralcontainers
-    scope: '*'
+{{ toYaml .Values.rules | indent 2 }} 
   sideEffects: None
   timeoutSeconds: 25
