--- a/charts/lakom/charts/runtime/templates/secret-lakom-server-tls.yaml
+++ b/charts/lakom/charts/runtime/templates/secret-lakom-server-tls.yaml
@@ -6,10 +6,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: lakom-server-tls
+  name: {{ .Values.global.name }}-tls
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ .Values.name }}
+    app.kubernetes.io/name: {{ .Values.global.name }}
     app.kubernetes.io/instance: {{ .Release.Name }}
 type: kubernetes.io/tls
 data:
