--- a/charts/lakom/charts/runtime/templates/serviceaccount.yaml
+++ b/charts/lakom/charts/runtime/templates/serviceaccount.yaml
@@ -1,17 +1,15 @@
 # SPDX-FileCopyrightText: 2022 SAP SE or an SAP affiliate company and Gardener contributors
 #
 # SPDX-License-Identifier: Apache-2.0
-{{- if .Values.kubeconfig }}
+{{- if not (or .Values.global.kubeconfig .Values.projectedKubeconfig) }}
 ---
 apiVersion: v1
-kind: Secret
+kind: ServiceAccount
 metadata:
-  name: lakom-target-kubeconfig
+  name: {{ .Values.global.name }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ .Values.name }}
+    app.kubernetes.io/name: {{ .Values.global.name }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-type: Opaque
-data:
-  kubeconfig: {{ .Values.kubeconfig | b64enc }}
+automountServiceAccountToken: false
 {{- end }}
