--- a/charts/lakom/charts/runtime/templates/secret-lakom-target-kubeconfig.yaml
+++ b/charts/lakom/charts/runtime/templates/secret-lakom-target-kubeconfig.yaml
@@ -1,16 +1,17 @@
 # SPDX-FileCopyrightText: 2022 SAP SE or an SAP affiliate company and Gardener contributors
 #
 # SPDX-License-Identifier: Apache-2.0
-
+{{- if .Values.global.kubeconfig }}
 ---
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
-  name: lakom-config
+  name: {{ .Values.global.name }}-target-kubeconfig
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ .Values.name }}
+    app.kubernetes.io/name: {{ .Values.global.name }}
     app.kubernetes.io/instance: {{ .Release.Name }}
+type: Opaque
 data:
-  config.yaml: |
-  {{ toYaml .Values.cosign | nindent 4 }}
+  kubeconfig: {{ .Values.global.kubeconfig | b64enc }}
+{{- end }}
