--- a/charts/lakom/values.yaml
+++ b/charts/lakom/values.yaml
@@ -2,81 +2,89 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 
-name: lakom-admission-controller
+global:
+  name: lakom-admission-controller
+  kubeconfig: {}
 
-image:
-  pullPolicy: IfNotPresent
-  tag: latest
-  repository: europe-docker.pkg.dev/gardener-project/public/gardener/extensions/lakom
+application:
+  enabled: true
+  admissionConfig:
+    objectSelector: {}
+    namespaceSelector:
+      matchExpressions:
+      - key: "kubernetes.io/metadata.name"
+        operator: "NotIn"
+        values:
+        - "kube-system"
+        - "lakom-system"
+    clientConfig:
+      caBundle: foo
+      urlHostname: ""
+    rules:
+    - apiGroups:
+      - ""
+      apiVersions:
+      - v1
+      operations:
+      - CREATE
+      - UPDATE
+      resources:
+      - pods
+      - pods/ephemeralcontainers
+      scope: '*'
 
-replicaCount: 3
-resources:
-  requests:
-    memory: 25M
-metricsPort: 8080
-healthPort: 8081
-serverPort: 10250
-cache:
-  ttl: 10m
-  refreshInterval: 30s
-cosign:
-  publicKeys: []
-  # - name: key1
-  #   algorithm: RSASSA-PKCS1-v1_5-SHA256
-  #   key: |-
-  #     -----BEGIN PUBLIC KEY-----
-  #     1234
-  #     -----END PUBLIC KEY-----
-  # - name: key2
-  #   algorithm: RSASSA-PKCS1-v1_5-SHA256
-  #   key: |-
-  #     -----BEGIN PUBLIC KEY-----
-  #     abcd
-  #     -----END PUBLIC KEY-----
-useOnlyImagePullSecrets: false
-allowUntrustedImages: false
-allowInsecureRegistries: false
-kubeconfig: {}
-projectedKubeconfig: {}
-  # baseMountPath: /var/run/secrets/gardener.cloud
-  # genericKubeconfigSecretName: generic-token-kubeconfig
-  # tokenSecretName: access-shoot-lakom-admission
-admissionConfig:
-  objectSelector: {}
-  namespaceSelector:
-    matchExpressions:
-    - key: "kubernetes.io/metadata.name"
-      operator: "NotIn"
-      values:
-      - "kube-system"
-      - "lakom-system"
-  clientConfig:
-    caBundle: foo
-    urlHostname: ""
-  rules:
-  - apiGroups:
-    - ""
-    apiVersions:
-    - v1
-    operations:
-    - CREATE
-    - UPDATE
-    resources:
-    - pods
-    - pods/ephemeralcontainers
-    scope: '*'
-tls:
-  crt: aaaa
-  key: bbbb
-priorityClass:
+runtime:
   enabled: true
-  value: 100
-  name: lakom-system
-vpa:
-  enabled: true
-  updatePolicy:
-    updateMode: "Auto"
-additionalAnnotations:
-  service: {}
-additionalLabels:
-  deployment: {}
+
+  image:
+    pullPolicy: IfNotPresent
+    tag: latest
+    repository: europe-docker.pkg.dev/gardener-project/public/gardener/extensions/lakom
+
+  replicaCount: 3
+  resources:
+    requests:
+      memory: 25M
+  metricsPort: 8080
+  healthPort: 8081
+  serverPort: 10250
+  cache:
+    ttl: 10m
+    refreshInterval: 30s
+  cosign:
+    publicKeys: []
+    # - name: key1
+    #   algorithm: RSASSA-PKCS1-v1_5-SHA256
+    #   key: |-
+    #     -----BEGIN PUBLIC KEY-----
+    #     1234
+    #     -----END PUBLIC KEY-----
+    # - name: key2
+    #   algorithm: RSASSA-PKCS1-v1_5-SHA256
+    #   key: |-
+    #     -----BEGIN PUBLIC KEY-----
+    #     abcd
+    #     -----END PUBLIC KEY-----
+  useOnlyImagePullSecrets: false
+  allowUntrustedImages: false
+  allowInsecureRegistries: false
+  projectedKubeconfig: {}
+    # baseMountPath: /var/run/secrets/gardener.cloud
+    # genericKubeconfigSecretName: generic-token-kubeconfig
+    # tokenSecretName: access-shoot-lakom-admission
+
+  tls:
+    crt: aaaa
+    key: bbbb
+  priorityClass:
+    enabled: true
+    value: 100
+    name: lakom-system
+  vpa:
+    enabled: true
+    updatePolicy:
+      updateMode: "Auto"
+  additionalAnnotations:
+    service: {}
+  additionalLabels:
+    deployment: {}
