--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -126,10 +126,17 @@ build:
 deploy:
   helm:
     releases:
-      - name: gardener-extension-shoot-lakom-admission
+      - name: gardener-extension-shoot-lakom-admission-runtime
         namespace: garden
         wait: true
-        chartPath: charts/gardener-extension-shoot-lakom-admission
+        chartPath: charts/gardener-extension-shoot-lakom-admission/charts/runtime
         setValueTemplates:
+          gardener.virtualCluster.enabled: "false"
           global.image.repository: '{{.IMAGE_REPO_local_skaffold_gardener_extension_shoot_lakom_admission}}'
           global.image.tag: '{{.IMAGE_TAG_local_skaffold_gardener_extension_shoot_lakom_admission}}@{{.IMAGE_DIGEST_local_skaffold_gardener_extension_shoot_lakom_admission}}'
+      - name: gardener-extension-shoot-lakom-admission-application
+        namespace: garden
+        wait: true
+        chartPath: charts/gardener-extension-shoot-lakom-admission/charts/application
+        setValueTemplates:
+          gardener.virtualCluster.enabled: "false"
