--- a/example/25-rbac.yaml
+++ b/example/25-rbac.yaml
@@ -53,7 +53,13 @@ rules:
   resources:
   - managedresources
   verbs:
-  - "*"
+  - delete
+  - get
+  - list
+  - patch
+  - create
+  - update
+  - watch
 - apiGroups:
   - ""
   resources:
@@ -80,7 +86,12 @@ rules:
   - secrets
   - events
   verbs:
-  - "*"
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
 - apiGroups:
   - coordination.k8s.io
   resources:
