--- a/.golangci.yaml.in
+++ b/.golangci.yaml.in
@@ -7,6 +7,7 @@ linters:
   - gocritic
   - gosec
   - revive
+  - importas
 
 issues:
   exclude-use-default: false
@@ -22,3 +23,18 @@ issues:
   - "exported: (type|func) name will be used as .* by other packages, and that stutters;"
   exclude-files:
   - "zz_generated\\..*\\.go$"
+
+linters-settings:
+  importas:
+    alias:
+      # importas.alias is merged with the one from the github.com/gardener/gardener
+      # the configurations in this file take precedence and can overwrite configs from Gardener.
+      # Lakom packages
+      - pkg: github.com/gardener/gardener-extension-shoot-lakom-service/pkg/apis/config
+        alias: apisconfig
+      - pkg: github.com/gardener/gardener-extension-shoot-lakom-service/pkg/apis/config/v1alpha1
+        alias: configv1alpha1
+      - pkg: github.com/gardener/gardener-extension-shoot-lakom-service/pkg/apis/lakom
+        alias: apislakom
+      - pkg: github.com/gardener/gardener-extension-shoot-lakom-service/pkg/apis/lakom/v1alpha1
+        alias: lakomv1alpha1
