Fix extension controller permissions to deletecollection secrets

--- a/example/25-rbac.yaml
+++ b/example/25-rbac.yaml
@@ -93,6 +93,12 @@ rules:
   - patch
   - update
 - apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - deletecollection
+- apiGroups:
   - coordination.k8s.io
   resources:
   - leases
