--- a/charts/gardener-extension-shoot-lakom-service/templates/rbac.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/rbac.yaml
@@ -74,6 +74,12 @@ rules:
   - patch
   - update
 - apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - deletecollection
+- apiGroups:
   - coordination.k8s.io
   resources:
   - leases
