--- a/charts/gardener-extension-shoot-lakom-service/templates/rbac.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/rbac.yaml
@@ -95,8 +95,9 @@ rules:
   - {{ include "leaderelectionid" . }}
   - gardener-extension-heartbeat
   verbs:
-  - update
   - get
+  - patch
+  - update
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
