--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,6 +19,7 @@ jobs:
       version-commit-callback-action-path: .github/actions/prepare-release
     permissions:
       contents: read
+      pull-requests: write # needed to rm `reviewed/ok-to-test` label
 
   oci-images:
     name: Build OCI-Images
