Set errexit, nounset and pipefail options
Similar to https://github.com/gardener/gardener-extension-shoot-networking-problemdetector/pull/267

--- a/.github/actions/prepare-release/action.yaml
+++ b/.github/actions/prepare-release/action.yaml
@@ -9,5 +9,8 @@ runs:
     - name: make-generate
       shell: bash
       run: |
-        set -eu
+        set -o errexit
+        set -o nounset
+        set -o pipefail
+
         make generate
