--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,7 +19,6 @@ jobs:
       version-commit-callback-action-path: .github/actions/prepare-release
     permissions:
       contents: read
-      pull-requests: write # needed to rm `reviewed/ok-to-test` label
 
   oci-images:
     name: Build OCI-Images
@@ -114,9 +113,7 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '1.24'
-      - uses: gardener/cc-utils/.github/actions/trusted-checkout@master
-        with:
-          remove-trusted-label: false
+      - uses: actions/checkout@v4
       - uses: gardener/cc-utils/.github/actions/setup-git-identity@master
       - name: run-verify
         run: |
@@ -128,7 +125,7 @@ jobs:
           make verify-extended |& tee /tmp/blobs.d/verify-log.txt
           # verify calls `make sast-report`, which generates `gosec-report.sarif`
           tar czf /tmp/blobs.d/gosec-report.tar.gz gosec-report.sarif
-          tar czf /tmp/blobs.d/verify-log.tar.gz -C/tmp/blobs.d verify-log.txt
+          tar czf /tmp/blobs.d/verify-log.tar.gz -C /tmp/blobs.d verify-log.txt
       - name: add-reports-to-component-descriptor
         uses: gardener/cc-utils/.github/actions/export-ocm-fragments@master
         with:
