--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,6 +24,7 @@ jobs:
     name: Build OCI-Images
     needs:
       - prepare
+      - verify
     permissions:
       contents: read
       packages: write
@@ -50,6 +51,19 @@ jobs:
       oci-repository: ${{ matrix.args.oci-repository }}
       oci-platforms: linux/amd64,linux/arm64
       extra-tags: latest
+
+  oci-images-summary:
+    name: OCI Images Summary
+    runs-on: solinas
+    needs:
+    - oci-images
+    if: ${{ always() }}  # Ensures this job runs even if the matrix partially fails
+    permissions:
+      contents: read
+    steps:
+      - name: Fail if OCI matrix failed
+        if: ${{ needs.oci-images.result != 'success' }}
+        run: exit 1
 
   helmcharts:
     name: Build Helmcharts
@@ -83,12 +97,8 @@ jobs:
           - name: shoot-lakom-admission-application
             dir: charts/gardener-extension-shoot-lakom-admission/charts/application
             oci-repository: charts/gardener/extensions
-            ocm-mappings:
-              - ref: ocm-resource:gardener-extension-shoot-lakom-admission.repository
-                attribute: image.repository
-              - ref: ocm-resource:gardener-extension-shoot-lakom-admission.tag
-                attribute: image.tag
-          - name: shoot-lakom-admission-application-runtime
+            ocm-mappings: []
+          - name: shoot-lakom-admission-runtime
             dir: charts/gardener-extension-shoot-lakom-admission/charts/runtime
             oci-repository: charts/gardener/extensions
             ocm-mappings:
@@ -104,6 +114,19 @@ jobs:
       oci-repository: ${{ matrix.args.oci-repository }}
       ocm-mappings: ${{ toJSON(matrix.args.ocm-mappings) }}
 
+  helmcharts-summary:
+    name: Helm Charts Summary
+    runs-on: solinas
+    needs:
+    - helmcharts
+    if: ${{ always() }}  # Ensures this job runs even if the matrix partially fails
+    permissions:
+      contents: read
+    steps:
+      - name: Fail if Helm Charts matrix failed
+        if: ${{ needs.helmcharts.result != 'success' }}
+        run: exit 1
+
   verify:
     runs-on: ubuntu-latest
     permissions:
@@ -112,16 +135,19 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '1.24'
-      - uses: gardener/cc-utils/.github/actions/trusted-checkout@master
+      - uses: actions/checkout@v4
       - uses: gardener/cc-utils/.github/actions/setup-git-identity@master
       - name: run-verify
         run: |
-          set -eu
+          set -o errexit
+          set -o nounset
+          set -o pipefail
+
           mkdir -p /tmp/blobs.d
           make verify-extended |& tee /tmp/blobs.d/verify-log.txt
           # verify calls `make sast-report`, which generates `gosec-report.sarif`
           tar czf /tmp/blobs.d/gosec-report.tar.gz gosec-report.sarif
-          tar czf /tmp/blobs.d/verify-log.tar.gz -C/tmp/blobs.d verify-log.txt
+          tar czf /tmp/blobs.d/verify-log.tar.gz -C /tmp/blobs.d verify-log.txt
       - name: add-reports-to-component-descriptor
         uses: gardener/cc-utils/.github/actions/export-ocm-fragments@master
         with:
