--- a/.github/workflows/non-release.yaml
+++ b/.github/workflows/non-release.yaml
@@ -1,26 +1,21 @@
-name: Build
+name: Non-Release
 on:
   push:
-  pull_request_target:
-    types:
-      - labeled
+    branches:
+    - main
+    - 'release-v*'
+  pull_request:
 
 jobs:
   build:
-    # only run if run was triggered by either:
-    # - head-update (push to local branch)
-    # - pullrequest-label `reviewed/ok-to-test` was added
-    # (the latter label is hardcoded in gardener/cc-utils's trusted-checkout action)
-    if: ${{ github.event.action != 'labeled' || github.event.label.name == 'reviewed/ok-to-test' }}
     uses: ./.github/workflows/build.yaml
     with:
       mode: snapshot
     secrets: inherit
     permissions:
-      contents: write
+      contents: read
       packages: write
       id-token: write
-      pull-requests: write # needed for un-labelling
 
   component-descriptor:
     uses: gardener/cc-utils/.github/workflows/post-build.yaml@master
