chore(charts): make extension `VPA`s use update mode `Recreate`

--- a/charts/lakom/values.yaml
+++ b/charts/lakom/values.yaml
@@ -83,7 +83,7 @@ runtime:
   vpa:
     enabled: true
     updatePolicy:
-      updateMode: "Auto"
+      updateMode: "Recreate"
   additionalAnnotations:
     service: {}
   additionalLabels:
