--- a/charts/gardener-extension-shoot-lakom-service/templates/deployment.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/deployment.yaml
@@ -64,7 +64,6 @@ spec:
       serviceAccountName: gardener-extension-{{ .Values.serviceName }}
       securityContext:
         runAsNonRoot: true
-        allowPrivilegeEscalation: false
         seccompProfile:
           type: RuntimeDefault
       containers:
@@ -73,6 +72,7 @@ spec:
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         securityContext:
           allowPrivilegeEscalation: false
+          privileged: false
         args:
         - --config=/etc/lakom-service/config.yaml
         - --lifecycle-max-concurrent-reconciles={{ .Values.controllers.lifecycle.concurrentSyncs }}
