Fix Helm chart image mapping for `lakom` chart
See https://github.com/gardener/gardener-extension-shoot-lakom-service/blob/main/charts/lakom/values.yaml#L36-L42

Signed-off-by: Jonas Brand (8R0WNI3) <j.brand@sap.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -91,9 +91,9 @@ jobs:
             oci-repository: charts/gardener/extensions
             ocm-mappings:
               - ref: ocm-resource:lakom.repository
-                attribute: image.repository
+                attribute: runtime.image.repository
               - ref: ocm-resource:lakom.tag
-                attribute: image.tag
+                attribute: runtime.image.tag
           - name: shoot-lakom-admission-application
             dir: charts/gardener-extension-shoot-lakom-admission/charts/application
             oci-repository: charts/gardener/extensions
