Use new registry domain `garden.local.gardener.cloud` -> `registry.local.gardener.cloud`

--- a/skaffold-operator.yaml
+++ b/skaffold-operator.yaml
@@ -17,7 +17,7 @@ build:
         - name: sha
           inputDigest: {}
   insecureRegistries:
-    - garden.local.gardener.cloud:5001
+    - registry.local.gardener.cloud:5001
   artifacts:
     - image: local-skaffold/gardener-extension-shoot-lakom-service
       requires:
