Let Dependabot set kind/enhancement label on opened PRs

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -4,6 +4,8 @@ updates:
   directory: /
   schedule:
     interval: daily
+  labels:
+  - kind/enhancement
 - package-ecosystem: gomod
   directory: /
   schedule:
