--- a/charts/gardener-extension-shoot-lakom-service/values.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/values.yaml
@@ -27,7 +27,7 @@ vpa:
     minAllowed:
       memory: 64Mi
   updatePolicy:
-    updateMode: "Recreate"
+    updateMode: "InPlaceOrRecreate"
 
 controllers:
   ignoreOperationAnnotation: false
