Enalbe topology aware routing for lakom service for seed

--- a/charts/gardener-extension-shoot-lakom-service/templates/deployment.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/deployment.yaml
@@ -83,6 +83,7 @@ spec:
         - --heartbeat-renew-interval-seconds={{ .Values.controllers.heartbeat.renewIntervalSeconds }}
         - --health-bind-address=:{{ .Values.controllers.healthPort }}
         - --metrics-bind-address=:{{ .Values.controllers.metricsPort }}
+        - --seed-topology-aware-routing-enabled={{ .Values.gardener.seed.spec.settings.topologyAwareRouting.enabled }}
         ports:
         - containerPort: {{ .Values.controllers.metricsPort }}
           name: metrics
